--- a/public/@photofolio/assets/css/main.css
+++ b/public/@photofolio/assets/css/main.css
@@ -340,8 +340,9 @@ h6 {
   }
 }
 
+/*Bagian atur menu tengah*/
 .header .header-social-links {
-  padding-right: 15px;
+  padding-right: 100px;
 }
 
 .header .header-social-links a {
@@ -764,7 +765,7 @@ h6 {
 
 .gallery .gallery-links .details-link {
 /*  font-size: 30px;*/
-  line-height: 0;
+line-height: 0;
 }
 
 .gallery .gallery-item:hover .gallery-links {
@@ -1175,8 +1176,8 @@ h6 {
   box-shadow: none;
   font-size: 14px;
 /*  background-color: var(--color-secondary);*/
-  border: 1px solid #2e3133;
-  color: #000;
+border: 1px solid #2e3133;
+color: #000;
 }
 
 .contact .php-email-form input {
